src/parser/snapshots/coconut__parser__statement__tests__return_stmt-5.snap
---
source: src/parser/statement.rs
expression: "parse_stmt(\"return\\t\".into()).unwrap().1"
---
{
  "type": "ReturnStatement",
  "argument": null,
  "start": 0,
  "end": 6
}
