src/parser/snapshots/coconut__parser__statement__tests__var_stmt.snap
---
source: src/parser/statement.rs
expression: "parse_stmt(\"var x = 1;\".into()).unwrap().1"
---
{
  "type": "VariableDeclaration",
  "declarations": [
    {
      "type": "VariableDeclarator",
      "id": {
        "type": "Identifier",
        "name": "x",
        "start": 4,
        "end": 5
      },
      "init": {
        "type": "Literal",
        "value": 1.0,
        "start": 8,
        "end": 9
      },
      "start": 4,
      "end": 9
    }
  ],
  "kind": "var",
  "start": 0,
  "end": 10
}
